--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.34.4",
+    "@prisma/client": "6.19.0",
     "@radix-ui/react-label": "^2.1.8",
     "@tabler/icons-react": "^3.35.0",
     "axios": "^1.7.9",
@@ -33,7 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
-    "prisma": "^6.19.0",
+    "prisma": "6.19.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
